# C_Shared_Memory

./: .gitignore  README.md
SharedMemory/: CMakeLists.txt  directorio.sh~  main.c
SharedMemory/data/: bitacora_asignados.txt  bitacora_fallidos.txt  shm_id.txt  shm_id_proc.txt
SharedMemory/headers/: espia.h  herramientas.h  imports.h  inicializador.h  list.h  pagina.h  productor.h  segmento.h
SharedMemory/sources/: espia.c  finalizador.c  herramientas.c  inicializador.c  list.c  pagina.c  productor.c  segmento.c
